Fit page into initial viewport to avoid overflow
- Change body's height to 100dvh instead of 100vh, so the page will be fit
to the viewport size without the need for scrolling.

- Implement dynamically scaling font sizes of caption, heading, labels,
and inputs.

- Adjust margin-top of caption, login text.

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
     --color-asterisk: rgb(218, 33, 33);
 
     --width-input: 325px;
+
+    --fontSize-paragraph: calc(1rem + 0.5vw);
 }
 
 /*Styles Reset Minimal*/
@@ -25,7 +27,7 @@
 }
 
 body {
-    min-height: 100vh;
+    height: 100dvh;
     min-width: 320px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(248, 248, 248);
@@ -134,18 +136,18 @@ div.bg-info {
 
 /*Main Section spacing*/
 .caption {
-    font-size: 2rem;
+    font-size: var(--fontSize-paragraph);
     font-weight: 500;
     line-height: 1.2;
 
-    margin: 180px 10% 50px 50px;
+    margin: 8% 10% 50px 50px;
 
     min-width: 20ch;
     max-width: 52ch;
 }
 
 .caption > p + p {
-    margin-top: 1.5rem;
+    margin-top: 1em;
 }
 
 button[type="submit"],
@@ -161,7 +163,7 @@ div.login {
 }
 
 #form > h2 {
-    font-size: 2rem;
+    font-size: var(--fontSize-paragraph);
     font-weight: 500;
     margin-bottom: 30px;
 }
@@ -198,7 +200,7 @@ div.login {
 
     width: var(--width-input);
     height: 40px;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     padding: 8px 10px;
     margin-top: 5px;
 }
@@ -215,7 +217,7 @@ button[type='submit'] {
     font-weight: 500;
 
     padding: 10px;
-    margin-block: 40px;
+    margin-top: 40px;
 
     position: relative;
     z-index: 1;
@@ -246,6 +248,7 @@ button[type='submit'] {
 }
 
 div.login {
+    margin-top: 16px;
     font-size: calc(1rem + 0.2vw);
     font-weight: 500;
 }
